* Fixed a major bug in carpaint material (issue #186)
* Fixed spelling mistake in cloth material "wool gabardine" preset
* Fixed Scene::RemoveUnusedMeshes()
* Fixed a bug in Mix material when working with specular materials (issue #187)
* Fixed an overflow problem when using an heterogenous volume on very large segments
* Sun relative size has now a lower bound of 1.0 to avoid numerical precision problems
* Fixed a problem with Scene::ToProperties() after editing a scene
* Fixed a self-shadow problem with area light sources

''Beta1 released''

* Fix ToProperties() of mapspherelight and spherelight
* Fixed a problem with caustic cache size when both PhotonGI caches were
  enabled and automatic stop condition for indirect cache was used
* PhotonGI Metropolis will now focus on caustic cache when indirect is done (and vice versa)
* Fixed the access to an uninitialized variable when using PhotonGI caustic cache alone
* Fixed the access to an uninitialized variable in ProjectionLight::Preprocess()
* Fixed a crash when trying to render a scene without light sources with PATHOCL (issue #202)
* Fixed DLSC to work with Front and back material transparency (aka light invisible object)
* Fixed a problem in BIDIRCPU with camera PDF
* Fixed a bug in Mix material transparency support (issue #210)
* Added a workaround to an AMD OpenCL compiler bug in DirectLight_BSDFSampling()

''Beta2 released''

* Fixed a problem in the random number generator of PhotonGI
* Fixed wrong theta being saved in ToProperties() of distant light
* Fixed a compilation error in RoughMatte OpenCL code (issue #218)
* Fixed a problem with Disney material specular tint
* Fixed a TILEPATH bug causing black renderings

Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
of release notes.

**Note for Windows users:** you have to install the [Microsoft Visual C++ Redistributable
for Visual Studio 2017](https://aka.ms/vs/15/release/vc_redist.x64.exe).