@@ -13,6 +13,12 @@ scene.camera.autofocus.enable = 0
 scene.camera.type = "perspective"
 scene.camera.oculusrift.barrelpostpro.enable = 0
 scene.camera.fieldofview = 49.1343422
+##
+#scene.camera.motion.0.time = 0.0
+#scene.camera.motion.0.transformation = 1.0 0.0 0.0 0.0  0.0 1.0 0.0 0.0  0.0 0.0 1.0 0.0  0.0 0.0 0.0 1.0
+#scene.camera.motion.1.time = 1.0
+#scene.camera.motion.1.transformation = 1.0 0.0 0.0 0.0  0.0 1.0 0.0 0.0  0.0 0.0 1.0 0.0  0.5 0.3 0.0 1.0
+##
 scene.textures.Implicit-ConstFloatTexture-45615f27-7f9f-47de-91f9-ca861e317532.type = "constfloat1"
 scene.textures.Implicit-ConstFloatTexture-45615f27-7f9f-47de-91f9-ca861e317532.value = 1.5
 scene.textures.Implicit-ConstFloatTexture3-33d5e275-0bed-4d0e-a552-a4ae4adb4538.type = "constfloat3"
